# Silo_discharge_1

./: .gitignore  README.md  Silo_discharge.ipynb  dev_setup.md  inputs.json  pyproject.toml  requirements.txt  results.json  run_dev.ps1  run_dev.py  serve.py
data/: sample_layers.csv  sample_silos.csv  sample_suppliers.csv
examples/: run_example.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: PayloadFormModal.jsx  SiloFigure.jsx
frontend/src/context/: AppContext.jsx
frontend/src/data/: defaultPayload.js
frontend/src/pages/: DashboardPage.jsx  InputFormPage.jsx
outputs/: optimizer_comparison.csv  optimizer_comparison.json
silo_blend/: __init__.py
src/silo_blend/: __init__.py  bayes_opt.py  cli.py  compare_optimizers.py  models.py  montecarlo.py  optimize.py  simulate.py
src/silo_blend/api/: __init__.py  __main__.py  app.py  schemas.py  service.py
tests/: test_api.py  test_bayes_opt.py  test_models.py  test_optimize.py  test_simulate.py
