[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silo_blend"
version = "0.1.0"
description = "3-silo malt blend simulation and valve-time optimization"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "silo_blend contributors" }]
dependencies = [
  "numpy>=1.28",
  "pandas>=2.2",
  "scipy>=1.11",
  "scikit-optimize>=0.10.2",
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-multipart",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
